--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -17,9 +17,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100vh;
 }
+
 /** gives box shadow to the video frame **/
 .borderBoxShadow {
   -webkit-box-shadow: 0 3px 7px var(--shadow20);
@@ -88,14 +87,16 @@
   color: var(--white30);
   margin: 0px;
 }
-@media (max-width: 768px) {
+
+@media (min-width: 1024px) {
   .modal {
-    width: 100%;
+    top: 10%;
+    bottom: 40px;
+    width: 50%;
   }
 }
 
 /** LikeDislike */
-
 .likeDislikeBtnWrapper {
   display: flex;
   margin-bottom: 0.75rem /* 12px */;
@@ -103,7 +104,6 @@
   top: 35%;
   padding-left: 1rem /* 48px */;
 }
-
 .btnWrapper {
   border-color: var(--white10);
   border-style: solid;
@@ -114,7 +114,6 @@
   display: flex;
   justify-content: center;
 }
-
 .likeBtnWrapper {
   margin-right: 0.5rem /* 8px */;
 }
